<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="price"
            type="cu.lexz451.rentmanager.data.model.Price" />
        <variable
            name="onSave"
            type="android.view.View.OnClickListener" />
        <variable
            name="onCancel"
            type="android.view.View.OnClickListener" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:hint="@string/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={price.name}"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_input"
            android:hint="@string/price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={price.price}"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <LinearLayout
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="@{onSave}"
                android:text="@string/save"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="@{onCancel}"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</layout>
