<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="record"
            type="cu.lexz451.rentmanager.data.model.BlackListRecord" />
    </data>
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:textColor="@color/colorPrimary"
            android:text="@string/client"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@{record.client.ci}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="4dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:text="@{record.client.name}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reason_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={record.reason}"
                android:inputType="text"
                android:maxLength="120"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:text="@string/add"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</layout>