<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rooms.RoomDetailFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:visibility="gone"
                android:id="@+id/clientRegister"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegister"
                        app:icon="@drawable/ic_person_add_black_24dp"
                        android:text="@string/add_client"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                app:contentPadding="16dp"
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/clientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="8dp"
                        android:text="@string/client"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="91013028547"
                        android:id="@+id/clientId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:id="@+id/clientName"
                        tools:text="Alejandro R. Zaldivar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="8dp"
                        android:text="@string/check_in_hour"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="5:35 p.m"
                        android:id="@+id/checkInHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_marginTop="8dp"
                        android:text="@string/time_passed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="35 min"
                        android:id="@+id/timingHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:visibility="gone"
                android:id="@+id/clientProducts"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textview.MaterialTextView
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:text="@string/expenses"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnAddProduct"
                            app:icon="@drawable/ic_add_black_24dp"
                            android:text="@string/add_product"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/productList"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginTop="8dp"
                        tools:itemCount="2"
                        tools:listitem="@layout/room_detail_product_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPay"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
                app:icon="@drawable/ic_credit_card_black_24dp"
                android:text="@string/check_out_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/roomInfo"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnInventory"
                    android:minWidth="150dp"
                    app:icon="@drawable/ic_storage_black_24dp"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    android:text="@string/inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHistory"
                    android:minWidth="150dp"
                    app:icon="@drawable/ic_data_usage_black_24dp"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    android:text="@string/logs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>